[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "load_balancing"
authors = [{name = "Daniel Stone", email = "daniel.l.stone@durham.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10, <3.11"
dependencies = [
    "requests >=2.6",
    "numba >=0.55.1, <0.56",
    "numpy >=1.21, <1.22",
    "tqdm >=4.64.0, <4.65",
    "ipywidgets >=7.7.0, <7.8"
]

[project.optional-dependencies]
dev = [
    "black"
]
